# nix-manipulator

./: .gitignore  LICENSE  README.md  flake.nix  package.nix  pyproject.toml
.github/workflows/: release.yml  test-nix-build.yml  test-on-nixpkgs.yml  test-on-ubuntu.yml
nix_manipulator/: __main__.py
src/nima/: __init__.py  cli.py  format.py  manipulations.py  mapping.py  parser.py  serializer.py  utils.py
src/nima/expressions/: assertion.py  binary.py  binding.py  comment.py  ellipses.py  expression.py  identifier.py  indented_string.py  inherit.py  let.py  list.py  operator.py  parenthesis.py  path.py  primitive.py  select.py  set.py  source_code.py  unary.py  with_statement.py
src/nima/expressions/function/: call.py  definition.py
tests/: test_cli.py  test_configure_system.py  test_expressions_to_nix.py  test_local_nix_files.py  test_reproduce_nixpkgs.py  test_reproduce_simple.py  test_updates.py
tests/expressions/: trl.py
