[project]
name = "nima"
version = "0.1.3-dev"
description = "A Python library for parsing, manipulating, and reconstructing Nix source code with high-level abstractions while preserving formatting and comments in RFC-formatted code."
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-3.0-or-later"
license-files = ["COPYING", "COPYING.LESSER", "LICENSE"]
authors = [
    { name = "Hugo Herter", email = "git@hugoherter.com" },
    { name = "Vortriz", email = "vorarishi22+github@gmail.com" }
]

dependencies = [
  "pydantic>=2.11.4",
  "pygments>=2.19.1",
  "tree-sitter-nix>=0.1.0",
  "tree-sitter>=0.24.0",
]


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv]
package = false
